[package]
name = "hashable"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-types = { git = "https://github.com/cita-cloud/cita-types",branch = "main" }
tiny-keccak= { version = "1.4", optional = true }
blake2b_simd = {version = "0.5" ,optional = true}
libsm = { git = "https://github.com/citahub/libsm", branch = "master", optional = true }

[features]
default = []
sha3hash = ["tiny-keccak"]
blake2bhash = ["blake2b_simd"]
sm3hash = ["libsm"]
