[package]
name = "cita-hashable"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "Provide a switch to choice algorithm"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/cita-cloud/hashable"

[dependencies]
cita-types = "0.1"
tiny-keccak= { version = "1.4", optional = true }
blake2b_simd = {version = "0.5" ,optional = true}
libsm = {version = "0.4" ,optional = true}

[features]
default = []
sha3hash = ["tiny-keccak"]
blake2bhash = ["blake2b_simd"]
sm3hash = ["libsm"]
